# Trading_Bot

./: .env.example  .gitignore  Makefile  README.md  cli.py  conftest.py  pyproject.toml  requirements.txt  ui.py
.streamlit/: config.toml
bot/: __init__.py  client.py  exceptions.py  exchange_info.py  execution.py  logging_config.py  orders.py  runtime.py  validators.py
scripts/: generate_sample_logs.py
tests/: test_cli.py  test_client.py  test_exchange_info.py  test_execution.py  test_orders.py  test_validators.py
