[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot"
version = "1.0.0"
description = "Binance Futures Testnet order placement bot with CLI and optional Streamlit UI"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1,<8.2",
    "httpx>=0.27.0",
    "typer>=0.12.3",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
    "loguru>=0.7.2",
    "streamlit>=1.56.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
trading-bot = "cli:app"

[tool.setuptools]
py-modules = ["cli", "ui"]

[tool.setuptools.packages.find]
include = ["bot*"]
exclude = ["logs*", "tests*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["bot"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
